<resources>
    <string name="app_name">Android_VL_RepoPattern</string>
    <string name="add">Add</string>
    <string name="item">Item</string>
    <string name="name">Name</string>
    <string name="item_picture">Item Picture</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="items">Items</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_item">Add Item</string>
    <string name="title">Title</string>
</resources>