<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddFragment">

    <Button
        android:id="@+id/add_btnAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="@+id/add_tilNumber"
        app:layout_constraintStart_toEndOf="@+id/add_btnCancel"
        app:layout_constraintTop_toBottomOf="@+id/add_tilNumber" />

    <Button
        android:id="@+id/add_btnCancel"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:background="@color/white"
        android:padding="16dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/add_btnAdd"
        app:layout_constraintStart_toStartOf="@+id/add_tilNumber"
        app:layout_constraintTop_toBottomOf="@+id/add_tilNumber" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_til_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_textInputTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_tilNumber"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/add_til_title"
        app:layout_constraintStart_toStartOf="@+id/add_til_title"
        app:layout_constraintTop_toBottomOf="@+id/add_til_title"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginBottom="16dp"
        app:cardElevation="5dp"
        app:contentPadding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/add_til_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_launcher_foreground" />
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>
